--- a/index.css
+++ b/index.css
@@ -97,3 +97,19 @@ downloadbuttonsarray {
 downloadbuttonsarray[disabled] {
     width: 275px;
 }
+
+canvas {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: -1;
+}
+
+@media (prefers-color-scheme: light) {
+    hero>*:not(canvas), hero>a#downloadbutton {
+        filter: invert(1);
+    }
+}
