Added auto-update system
Note: This has been tested on Windows so far, will test and possibly bug-fix on Linux, maybe Mac too.

GIANT THANKS to Qlexc (@MusicOnStereo) for helping fix async issues and help find an installer bug!

Co-Authored-By: QlexcTheFox <80660200+musiconstereo@users.noreply.github.com>

--- a/index.css
+++ b/index.css
@@ -207,3 +207,41 @@ section#web {
 div#content[current="web"]>section#web {
     display: block;
 }
+
+div#updatestatus[status="checking"]::after {
+    content: "sync";
+}
+
+div#updatestatus[status="downloading"]::after {
+    content: "downloading";
+}
+
+div#updatestatus[status="downloaded"]::after {
+    content: "download_done";
+}
+
+div#updatestatus[status="uptodate"]::after {
+    content: "check";
+    opacity: 0;
+    transition: opacity 5s linear 10s;
+}
+
+div#updatestatus[status="fail"]::after {
+    content: "sync_problem";
+    animation: fail 1s steps(1) 0s infinite normal;
+}
+
+@keyframes fail {
+    0% {
+        opacity: 1
+    }
+    50%{
+        opacity: 0
+    }
+}
+
+div#updatestatus::after {
+    margin-left: 5px;
+    color: #f0f0f0;
+    opacity: 1;
+}
