--- a/index.css
+++ b/index.css
@@ -51,7 +51,8 @@ downloadbutton {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    transition: width 0.5s ease-in-out, background 0.5s ease-in-out, color 0.5s ease-in-out
+    transition: width 0.5s ease-in-out, background 0.5s ease-in-out, color 0.5s ease-in-out;
+    text-align: center;
 }
 
 downloadbutton[disabled] {
