--- a/index.css
+++ b/index.css
@@ -858,3 +858,29 @@ section#settings div.settingsmaincontentbox {
         margin-right: 15px;
     }
 }
+
+progress#launcherUpdateProgress {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+progress::-webkit-progress-bar {
+    background-color: rgba(128, 128, 128, 128);
+    border-radius: 15px;
+    overflow: hidden;
+    height: 10px;
+    top: 10px;
+    position: relative;
+}
+
+progress::-webkit-progress-value {
+    background-color: #F0F0F0;
+    border-radius: 15px;
+    transition: width 0.5s ease-in-out
+}
+
+div#updateHERO:has(div#updatestatusSETTINGS[status="downloaded"]) progress#launcherUpdateProgress, div#updateHERO:has(div#updatestatusSETTINGS[status="checking"]) progress#launcherUpdateProgress, div#updateHERO:has(div#updatestatusSETTINGS[status="uptodate"]) progress#launcherUpdateProgress, div#updateHERO:has(div#updatestatusSETTINGS[status="fail"]) progress#launcherUpdateProgress {
+  display: none;
+  opacity: 0;
+  height: 0px;
+}
