--- a/index.css
+++ b/index.css
@@ -125,8 +125,8 @@ canvas {
     position: absolute;
     display: block;
     z-index: -1;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     aspect-ratio: 16/9;
 }
 
