--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -234,24 +234,25 @@
 
 /* fallback */
 @font-face {
-    font-family: 'Material Symbols Outlined';
+    font-family: 'Material Symbols';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 100 700;
     src: url(symbols.woff2) format('woff2');
 }
   
-.material-symbols-outlined {
-    font-family: 'Material Symbols Outlined';
-    font-weight: normal;
-    font-style: normal;
+.material-symbols {
+    font-family: 'Material Symbols' !important;
+    font-weight: normal !important;
+    font-style: normal !important;
     font-size: 24px;
-    line-height: 1;
+    line-height: 1 !important;
     letter-spacing: normal;
     text-transform: none;
     display: inline-block;
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
+    font-feature-settings: "liga";
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
     user-select: none;
